--- a/app/views/photos/_avatar_header.html.erb
+++ b/app/views/photos/_avatar_header.html.erb
@@ -1,1 +1,1 @@
-Avatar <%= link_to image_tag('edit.png', width: "30", height: "30"), edit_user_photo_path(id: user.id), remote: true %>
+Avatar <%= link_to image_tag('edit.png', width: "30", height: "30"), edit_user_photo_path(id: user.id), remote: true if user == current_user%>
