--- a/app/views/friendship_requests/_requester.html.erb
+++ b/app/views/friendship_requests/_requester.html.erb
@@ -1,17 +1,22 @@
 <div class="person">
   <% if requester.photo.nil? %>
     <%= link_to user_path(id: requester.id), class: "card-link" do %>
-      <%= image_tag 'space.png', class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: requester.nickname %>
+      <%= image_tag 'space.png', class: "medium-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: requester.nickname %>
     <%end %>
   <%else %>
     <% if requester.photo.image_data? %>
       <%= link_to user_path(id: requester.id), class: "card-link" do %>
-        <%= image_tag requester.photo.image_url(:small), class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: requester.nickname %>
+        <%= image_tag requester.photo.image_url(:small), class: "medium-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: requester.nickname %>
       <% end %>
     <% end %>
   <%end %>
   <div class="info">
     <%= requester.name%> <%= requester.surname%>
+    <% if requester.online? %>
+      <%= image_tag 'online.png', id: 'status-img' %>
+    <% else %>
+      <%= image_tag 'offline.png', id: 'status-img' %>
+    <% end %>
     <% if user == current_user %>
       <%=button_to "Confirm", user_friendships_path(requester_id: requester.id), method: :post, class: "btn btn-primary", remote: true%>
     <%end %>
