--- a/app/views/users/user_panels/_admin_panel.html.erb
+++ b/app/views/users/user_panels/_admin_panel.html.erb
@@ -21,5 +21,11 @@
   Information
 <%end %>
 <% unless  current_user.friends.find_by(id: user.id) || current_user.inverse_friends.find_by(id: user.id) %>
-  <%= button_to "Request friendship", user_friendship_requests_path(user_id: user.id), method: :post, class: "btn btn-secondary", remote: true%>
+  <div class="info">
+    <p></p>
+    <% if current_user.all_friends.include?(user) || current_user.requestors.include?(user) || current_user.receivers.include?(user) %>
+    <% else %>
+      <%= button_to "Request friendship", user_friendship_requests_path(user_id: user.id), method: :post, class: "btn btn-secondary", remote: true%>
+  <% end %>
+  </div>
 <% end %>
