--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-sm-2">
       <%= render partial: "users/user_panel", locals: {user: @user} %>
     </div>
-    <div class="col-sm-8" id="friends">
+    <div class="col-sm-8">
       <%= render partial: "friendships/friends_list", locals: {friends: @friends} %>
     </div>
   </div>
