--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,12 @@
           </li>
         <% end %>
         <li class="nav-item">
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <% unless current_user.nil? %>
+            <%= link_to 'Users', users_path, method: :get, class: "nav-link" if current_user.admin?%>
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link", style: "display: flex; justify-content: flex-end;" %>
         </li>
       </ul>
     </div>
