--- a/app/views/posts/main_page.html.erb
+++ b/app/views/posts/main_page.html.erb
@@ -13,6 +13,10 @@
       <div id="main-posts">
         <%= render partial: "post", collection: @posts %>
       </div>
+      <div class="my-row">
+        <div class="col-sm-5"></div>
+        <%= paginate @posts, window: 2 %>
+      </div>
     </div>
 <div class="col-sm-1">
 </div>
