--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -46,7 +46,7 @@
         }
     });
     $('#query').typeahead(null, {
-        source: tags
+        //source: tags
     });
     $('#tags').tagsinput({
         typeaheadjs: [{
