--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -20,7 +20,11 @@
   </p>
 
   <p>
-    <%= form.collection_select :category_id, categories, :id, :name, {class: "form-control"}%>
+    <% if post.nil? %>
+      <%= form.collection_select :category_id, categories, :id, :name, {class: "form-control"}%>
+    <% else %>
+      <%= form.collection_select :category_id, categories, :id, :name, {:selected => post.categories.first.id} %>
+    <% end %>
   </p>
 
   <p>
