Hot-fix with post
(cherry picked from commit 5bbc701380275e60404c8f06368eb7f11e5647b7)

--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -20,7 +20,7 @@
   </p>
 
   <p>
-    <% if post.categories.nil? %>
+    <% if post.categories.empty? %>
       <%= form.collection_select :category_id, categories, :id, :name, {class: "form-control"}%>
     <% else %>
       <%= form.collection_select :category_id, categories, :id, :name, {:selected => post.categories.first.id} %>
